# flexfi-web3

./: CONTRIBUTING.md  LICENSE  README.md
SolArgosFullApp/SolArgos-frontend/: Cargo.toml
SolArgosFullApp/SolArgos-frontend/src/: lib.rs
SolArgosFullApp/SolArgos-frontend/src/components/: header.rs  mod.rs  transaction_view.rs
SolArgosFullApp/SolArgos-frontend/src/pages/: home.rs
SolArgosFullApp/SolArgos-frontend/static/: index.html
SolArgosFullApp/SolArgos-frontend/styles/: app.css
flexfi-web3/: .gitignore  Cargo.toml  README.md
flexfi-web3/src/: constants.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs  processor.rs
flexfi-web3/src/bnpl/: checker.rs  contract.rs  mod.rs  repayment.rs
flexfi-web3/src/card/: config.rs  manager.rs  mod.rs
flexfi-web3/src/core/: mod.rs  staking.rs  wallet.rs  whitelist.rs
flexfi-web3/src/freeze_spend/: authorization.rs  mod.rs
flexfi-web3/src/nft/: attach.rs  mint.rs  mod.rs  perks.rs
flexfi-web3/src/score/: contract.rs  mod.rs  query.rs
flexfi-web3/src/state/: authorization.rs  bnpl.rs  card.rs  mod.rs  nft.rs  score.rs  staking.rs  wallet.rs  whitelist.rs  yield_.rs
flexfi-web3/src/yield_module/: mod.rs  router.rs  tracker.rs
flexfi-web3/tests/: 1-verify-wallet-whitelisted.js  2-test-staking-with-backend.js  3-test-score.js  package-lock.json  package.json  test-staking-hardcoded-wallet.js  test-withdraw-staking-hardcoded-wallet.js
