[package]
name = "solargos-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = "0.7.7"
leptos_router = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3.68"
web-sys = { version = "0.3.68", features = [
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d",
    "Element", 
    "DomRect",
    "Navigator",
    "Clipboard",
    "console"
]}
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.14", features = ["json"] }
chrono = { version = "0.4.35", features = ["serde"] }

[features]
hydrate = ["leptos/hydrate"]
